--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:url" content="https://uncpokerbots.live" />
     <meta property="og:title" content="UNC Pokerbots" />
-    <meta property="og:description" content="Get ready for Pokerbots 2024-2025!" />
+    <meta property="og:description" content="Get ready for Pokerbots happening February 8-9, 2025!" />
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -45,8 +45,8 @@
             <!-- Pre-registration for Pokerbots IAP 2023 opening soon! Info sessions: -->
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
-            <p>Get ready for Pokerbots 2024-2025!</p> 
-         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> to be notified when registration opens</p>
+            <p><b>Get ready for Pokerbots happening February 8-9, 2025!</b></p> 
+         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> for the 2024-2025 competition</p>
             <!-- p>Stay tuned for next year</p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
           </div>
@@ -122,7 +122,7 @@
               </div>
               <div class="column">
                 <h2>How do I register?</h2>
-                <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> and we will notify you when competition registration opens.</p>
+                <p><a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> now for the 2024-2025 competition! Further details about the competition will be sent to those signed up at the link above.</p>
               </div>
             </div>
           </div>
