Added scrimmage server and event details

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <!-- Pre-registration for Pokerbots IAP 2023 opening soon! Info sessions: -->
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
-            <p><b>Get ready for Pokerbots happening February 8-9, 2025!</b></p> 
+            <p><b>Get ready for Pokerbots happening February 8-9, 2025 at Innovation Junction Carolina!</b></p> 
          <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> for the 2024-2025 competition</p>
-            <!-- p>Stay tuned for next year</p>
+            <p>Our scrimmage server is now live at <a href="https://scrimmage.uncpokerbots.com" style="color:blue; text-decoration:underline;">scrimmage.uncpokerbots.com</a></p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
           </div>
           <!-- <div class="text">
