--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <!-- Get hype for our Final Event on Friday, February 3rd, from 4:30 - 7:00pm EST!<br> -->
             <!-- Check out a recording of our info session <a href="https://pkr.bot/info-session-recording" style="color:white;text-decoration:underline">here</a>!<br> -->
             <p><b>Get ready for Pokerbots happening February 8-9, 2025 at Innovation Junction Carolina!</b></p> 
-         <p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> for the 2024-2025 competition</p>
+            <p>RSVP <a href="https://forms.gle/QqbXj9NDvY7NvrcP8" style="color:blue; text-decoration:underline;">here</a> to reserve your spot</p>
+            <!--p> <a href="https://docs.google.com/forms/d/1Nx2KOZvCOTK1CTPBF8r4DgMVD1Rwua-zFJy-3VsA4NQ/edit" style="color:blue; text-decoration:underline;">Sign up</a> for the 2024-2025 competition</p -->
             <p>Our scrimmage server is now live at <a href="https://scrimmage.uncpokerbots.com" style="color:blue; text-decoration:underline;">scrimmage.uncpokerbots.com</a></p>
             <!-- <p>Submission data is now available <a href="https://pkr.bot/blotto-results" style="color:white;text-decoration:underline">here</a>.</p> -->
           </div>
