Update with Eve face, remove Anan, and add Perplexity as sponsor

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
           <div class="diamond">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#B362AC;'></span></span>
             <a href="https://www.janestreet.com/"><img src="img/logos/diamond_janestreet.png" style="max-width: 25%; height: auto;"></a>
+            <a href="https://www.perplexity.ai/"><img src="img/logos/Perplexity-Logo.jpg" style="max-width: 25%; height: auto;"></a>
+
           </div>
           <div class="platinum">
             <span style='font-weight:bold; font-size: 1.5em;'><span style='color:#E5E4E2;'>PLATINUM SPONSORS - COMING SOON</span></span>
@@ -169,42 +171,35 @@
               <img src="img/headshots/yash.png">
               <div class="about">
                 <div class="name"><strong><a href="https://www.linkedin.com/in/yash-semlani-38716b157/" style="color: inherit;">Yash Semlani '28</a></strong></div>
-                <div class="position">President - UNC</div>
+                <div class="position">President</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/colby.png">
               <div class="about">
                 <div class="name"><strong><a href="https://www.linkedin.com/in/colbyeagan/" style="color: inherit;">Colby Eagan '26</a></strong></div>
-                <div class="position">Vice President - UNC</div>
+                <div class="position">Vice President</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/benjamin.png">
               <div class="about">
                 <div class="name"><strong><a href="https://www.linkedin.com/in/bengor/" style="color: inherit;">Benjamin Goroshnik '25</a></strong></div>
-                <div class="position">Head of Innovation - UNC</div>
-              </div>
-            </div>
-            <div class="team single">
-              <img src="img/headshots/ananyagarg.jpeg">
-              <div class="about">
-                <div class="name"><strong><a href="https://www.linkedin.com/in/ananyakgarg/" style="color: inherit;">Ananya Garg '25</a></strong></div>
-                <div class="position">Co-Head of Tech - UNC</div>
+                <div class="position">Head of Innovation</div>
               </div>
             </div>
             <div class="team single">
               <img src="img/headshots/nicholassanaie.jpeg">
               <div class="about">
                 <div class="name"><strong><a href="https://www.linkedin.com/in/nsanaie/" style="color: inherit;">Nicholas Sanaie '26</a></strong></div>
-                <div class="position">Co-Head of Tech - UNC</div>
+                <div class="position">Head of Tech</div>
               </div>
             </div>
             <div class="team single">
-              <img src="img/headshots/samir.png">
+              <img src="img/headshots/evenino.jpg">
               <div class="about">
-                <div class="name"><strong><a href="https://www.linkedin.com/in/samir-kassam-330579245/" style="color: inherit;">Samir Kassam '29</a></strong></div>
-                <div class="position">Site Developer - CVHS</div>
+                <div class="name"><strong><a href="https://www.linkedin.com/in/ivananino/" style="color: inherit;">Ivana (Eve) Nino '27</a></strong></div>
+                <div class="position">Head of Marketing</div>
               </div>
             </div>
           </div>
